tests/types/errors/closure_assign_to_const.expr
function outer() -> i32 {
  const i32 value = 1;
  function inner() -> i32 {
    value = 2;
    return value;
  }
  return inner();
}

print(outer());
